// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Alert component should render the "error" variant correctly 1`] = `
<div
  className="makeStyles-container-1 makeStyles-error-4"
>
  <ErrorOutlineIcon />
  <div
    className="makeStyles-contentContainer-2"
  >
    <span>
      Test Error Content
    </span>
  </div>
</div>
`;

exports[`the Alert component should render the "success" variant correctly 1`] = `
<div
  className="makeStyles-container-1 makeStyles-success-3"
>
  <CheckCircleOutlineIcon />
  <div
    className="makeStyles-contentContainer-2"
  >
    <span>
      Test Info Content
    </span>
  </div>
</div>
`;
